# cyclovandermonde

./: CITATION.cff  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
data/: res_100.csv  res_1000.csv  res_10000.csv  sq_100.txt  sq_1000.txt  sq_10000.txt
lib/: Cargo.toml
lib/benches/: trace.rs
lib/src/: lib.rs
scripts/: graph.sage  table.sage
src/: lib.rs  main.rs
