[package]
name = "cyclovander"
version = "1.1.0"
authors = ["Edoardo Signorini <edoars@gmail.com>"]
edition = "2018"
description = """
Library for computing the condition number of the Vandermonde matrix associated with the nth cyclotomic polynomial.
"""
license = "Apache-2.0"
readme = "README.md"

[lib]
bench = false

[features]
default = ["intel-mkl-static"]

netlib-static   = ["ndarray-linalg/netlib-static"]
netlib-system   = ["ndarray-linalg/netlib-system"]

openblas-static = ["ndarray-linalg/openblas-static"]
openblas-system = ["ndarray-linalg/openblas-system"]

intel-mkl-static = ["ndarray-linalg/intel-mkl-static"]
intel-mkl-system = ["ndarray-linalg/intel-mkl-system"]

[workspace]
members = ["cli"]
default-members = [".", "cli"]

[dependencies]
ndarray = "0.15.2"
red_primality = "0.2.0"
num = "0.4.0"

[dependencies.ndarray-linalg]
version = "0.14.1"
default-features = false

[dev-dependencies.criterion]
version = "0.3.5"
features = ["html_reports"]

[dev-dependencies.pprof]
version = "0.5.0"
features = ["criterion", "flamegraph"]

[[bench]]
name = "trace"
harness = false